--- a/app/src/main/res/layout/fragment_display_all_pokemon.xml
+++ b/app/src/main/res/layout/fragment_display_all_pokemon.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.DisplayAllPokemonFragment">
-
+    <androidx.compose.ui.platform.ComposeView
+        android:id="@+id/compose_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/display_all_recyclerview"
         android:layout_width="match_parent"
